--- a/src/layouts/manufacturing.html
+++ b/src/layouts/manufacturing.html
@@ -63,9 +63,11 @@
             </div>
             <div class="page__body">
                 <div class="manufacturing">
-                    <h1 class="manufacturing__preview">
-                        Производственная деятельность
-                    </h1>
+                    <div class="manufacturing__preview">
+                        <h1 class="manufacturing__heading">
+                            Производственная деятельность
+                        </h1>
+                    </div>
                     <div class="manufacturing__body container">
                         <section class="manufacturing__section">
                             <h2 class="manufacturing__sub-heading">
@@ -75,82 +77,73 @@
                                 <!-- Повторять для каждых 23 фото: -->
                                 <div class="tiles-23">
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-a.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-b.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-c.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-d.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-e.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-f.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-g.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-h.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-i.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-j.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-k.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-l.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-m.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-n.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-o.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-p.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-q.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-r.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-s.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-t.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-u.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-v.jpg" alt="">
                                     </a>
                                     <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles-23__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
+                                        <img class="tiles-23__image" src="../temp/manufacturing/manufacturing-03/manufacturing-03-w.jpg" alt="">
                                     </a>
                                 </div>
                             </div>
