--- a/src/styles/_manufacturing.css
+++ b/src/styles/_manufacturing.css
@@ -3,19 +3,12 @@
     padding-bottom: 74px;
 }
     .manufacturing__preview {
-        margin-top: 0;
-        margin-bottom: 0;
-        height: 620px;
+        height: 540px;
         background-image: url("../images/manufacturing/manufacturing-desktop@1x.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
         padding: 32px;
-        font-weight: 600;
-        font-size: 40px;
-        line-height: 49px;
-        text-align: center;
-        color: #FFFFFF;
     }
 
     @media (min-resolution: 1.5dppx) {
@@ -23,6 +16,15 @@
             background-image: url("../images/manufacturing/manufacturing-desktop@2x.jpg");
         }
     }
+        .manufacturing__heading {
+            margin-top: 0;
+            margin-bottom: 0;
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 49px;
+            text-align: center;
+            color: #FFFFFF;
+        }
 
     .manufacturing__section {
         padding-top: 42px;
@@ -41,3 +43,41 @@
             display: flex;
             flex-direction: column;
         }
+
+
+
+@media (1850px <= width) {
+
+    .manufacturing {
+        /*padding-top: 3px;*/
+        padding-bottom: 120px;
+    }
+        .manufacturing__preview {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            height: 633px;
+            /*background-image: url("../images/manufacturing/manufacturing-desktop@1x.jpg");*/
+            /*background-size: cover;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+            padding: 40px;
+        }
+            .manufacturing__heading {
+                font-size: 50px;
+                line-height: 58px;
+            }
+
+        .manufacturing__section {
+            padding-top: 59px;
+        }
+            .manufacturing__sub-heading {
+                font-size: 50px;
+                line-height: 58px;
+            }
+
+            .manufacturing__list {
+                margin-top: 51px;
+                /*display: flex;*/
+                /*flex-direction: column;*/
+            }
+}
