--- a/src/layouts/manufacturing.html
+++ b/src/layouts/manufacturing.html
@@ -71,6 +71,45 @@
                     <div class="manufacturing__body container">
                         <section class="manufacturing__section">
                             <h2 class="manufacturing__sub-heading">
+                                Руководство
+                            </h2>
+                            <div class="manufacturing__list">
+                                <div class="tiles tiles--3-columns">
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-01/manufacturing-01-a.jpg" alt="">
+                                    </a>
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-01/manufacturing-01-b.jpg" alt="">
+                                    </a>
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-01/manufacturing-01-c.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="manufacturing__section">
+                            <h2 class="manufacturing__sub-heading">
+                                Бухгалтерия
+                            </h2>
+                            <div class="manufacturing__list">
+                                <div class="tiles tiles--4-columns">
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-02/manufacturing-02-a.jpg" alt="">
+                                    </a>
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-02/manufacturing-02-b.jpg" alt="">
+                                    </a>
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-02/manufacturing-02-c.jpg" alt="">
+                                    </a>
+                                    <a class="tiles__item" href="#">
+                                        <img class="tiles__image" src="../temp/manufacturing/manufacturing-02/manufacturing-02-d.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="manufacturing__section">
+                            <h2 class="manufacturing__sub-heading">
                                 Производство
                             </h2>
                             <div class="manufacturing__list">
