--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -46,6 +46,7 @@
 @import url("_product.css");
 @import url("_slide-up.css");
 @import url("_manufacturing.css");
+@import url("_tiles-23.css");
 @import url("_tiles.css");
 
 
