--- a/src/styles/_tiles.css
+++ b/src/styles/_tiles.css
@@ -26,3 +26,37 @@
         .tiles__item:hover .tiles__image {
             filter: brightness(110%) contrast(105%);
         }
+
+
+
+@media (1850px <= width) {
+
+    .tiles {
+        /*display: grid;*/
+        /*gap: var(--tiles-gap);*/
+    }
+
+    .tiles--3-columns {
+        /*grid-template-columns: repeat(3, minmax(0, 1fr));*/
+        grid-template-rows: 412px;
+    }
+
+    .tiles--4-columns {
+        /*grid-template-columns: repeat(4, minmax(0, 1fr));*/
+        grid-template-rows: 303px;
+    }
+        .tiles__item {
+
+        }
+            .tiles__image {
+                /*vertical-align: top;*/
+                /*width: 100%;*/
+                /*height: 100%;*/
+                /*object-fit: cover;*/
+                /*transition: filter var(--transition-hover);*/
+            }
+
+            .tiles__item:hover .tiles__image {
+                /*filter: brightness(110%) contrast(105%);*/
+            }
+}
