--- a/src/styles/_tiles.css
+++ b/src/styles/_tiles.css
@@ -5,12 +5,12 @@
 
 .tiles--3-columns {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: 292px;
+    grid-auto-rows: 292px;
 }
 
 .tiles--4-columns {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    grid-template-rows: 212px;
+    grid-auto-rows: 212px;
 }
     .tiles__item {
 
@@ -38,12 +38,12 @@
 
     .tiles--3-columns {
         /*grid-template-columns: repeat(3, minmax(0, 1fr));*/
-        grid-template-rows: 412px;
+        grid-auto-rows: 412px;
     }
 
     .tiles--4-columns {
         /*grid-template-columns: repeat(4, minmax(0, 1fr));*/
-        grid-template-rows: 303px;
+        grid-auto-rows: 303px;
     }
         .tiles__item {
 
@@ -60,3 +60,39 @@
                 /*filter: brightness(110%) contrast(105%);*/
             }
 }
+
+
+
+@media (width < 740px) {
+
+    .tiles {
+        /*display: grid;*/
+        /*gap: var(--tiles-gap);*/
+        grid-auto-rows: 182px;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .tiles--3-columns {
+
+    }
+
+    .tiles--4-columns {
+
+    }
+        .tiles__item {
+
+        }
+            .tiles__image {
+                /*vertical-align: top;*/
+                /*width: 100%;*/
+                /*height: 100%;*/
+                /*object-fit: cover;*/
+                /*transition: filter var(--transition-hover);*/
+            }
+
+            .tiles__item:hover .tiles__image {
+                /*filter: brightness(110%) contrast(105%);*/
+            }
+}
+
+
