--- a/src/styles/_manufacturing.css
+++ b/src/styles/_manufacturing.css
@@ -81,3 +81,55 @@
                 /*flex-direction: column;*/
             }
 }
+
+
+
+@media (width < 740px) {
+
+    .manufacturing {
+        /*padding-top: 3px;*/
+        /*padding-bottom: 74px;*/
+    }
+        .manufacturing__preview {
+            height: 310px;
+            /*background-image: url("../images/manufacturing/manufacturing-desktop@1x.jpg");*/
+            /*background-size: cover;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+            padding: 20px;
+        }
+
+        @media (min-resolution: 1.5dppx) {
+            .manufacturing__preview {
+                /*background-image: url("../images/manufacturing/manufacturing-desktop@2x.jpg");*/
+            }
+        }
+            .manufacturing__heading {
+                /*margin-top: 0;*/
+                /*margin-bottom: 0;*/
+                /*font-weight: 600;*/
+                font-size: 30px;
+                line-height: 37px;
+                /*text-align: center;*/
+                /*color: #FFFFFF;*/
+            }
+
+        .manufacturing__section {
+            padding-top: 26px;
+        }
+            .manufacturing__sub-heading {
+                /*margin-top: 0;*/
+                /*margin-bottom: 0;*/
+                /*font-weight: 600;*/
+                font-size: 30px;
+                line-height: 37px;
+                /*text-align: center;*/
+            }
+
+            .manufacturing__list {
+                margin-top: 26px;
+                /*display: flex;*/
+                /*flex-direction: column;*/
+            }
+}
+
