--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,7 +14,7 @@
 /*@import url("_hide-scrollbar.css");*/
 
 @import url("_link.css");
-/*@import url("_button.css");*/
+@import url("_button.css");
 /*@import url("_input.css");*/
 /*@import url("_choice.css");*/
 @import url("_wysiwyg.css");
@@ -48,5 +48,7 @@
 @import url("_manufacturing.css");
 @import url("_tiles-23.css");
 @import url("_tiles.css");
+@import url("_intro.css");
+@import url("_index.css");
 
 
