--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -2,24 +2,27 @@
     display: inline-block;
     vertical-align: top;
     border: none;
-    padding: 13px 24px;
+    padding: 10px 24px;
     min-width: 100px;
     background-color: var(--action-color);
-    border-radius: 4px;
+    border-radius: 0;
     font-family: inherit;
-    font-size: 16px;
-    line-height: 24px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 20px;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
     cursor: pointer;
     user-select: none;
-    transition: background-color var(--transition-hover);
+    transition: background-color var(--transition-hover),
+                color var(--transition-hover);
 }
 
 .button:hover {
     background-color: var(--action-color-hover);
+    color: #0F33A9;
 }
 
 
@@ -28,14 +31,14 @@
     transition: none;
 }
 
-.button:disabled,
-.button:disabled:hover,
-.button:disabled:active {
-    background-color: #F6F6F6;
-    color: var(--disabled-color);
-    translate: none;
-    cursor: default;
-}
+/*.button:disabled,*/
+/*.button:disabled:hover,*/
+/*.button:disabled:active {*/
+/*    background-color: #F6F6F6;*/
+/*    color: var(--disabled-color);*/
+/*    translate: none;*/
+/*    cursor: default;*/
+/*}*/
 
 .button--secondary {
     box-shadow: inset 0 0 0 2px var(--action-color);
@@ -48,4 +51,10 @@
 }
 
 
-
+@media (1850px <= width) {
+    .button {
+        padding: 18px 30px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
