--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -7,8 +7,8 @@
     /*--transition-show: 1200ms var(--ease-out-quint);*/
     --image-fallback: #DFF3FF;
     --container-padding: 24px;
-    /*--action-color: #0D7FC5;*/
-    /*--action-color-hover: #2FA5ED;*/
+    --action-color: #0D25FF;
+    --action-color-hover: #00F0FF;
     /*--input-border: #B3B3B3;*/
     /*--input-border-hover-and-focus: #7E7E7E;*/
     /*--placeholder-color: #999999;*/
