--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -67,7 +67,9 @@
                         <div class="intro__wrap container">
                             <div class="intro__item intro__item--first">
                                 <h2 class="intro__heading">
-                                    Монтаж и проектирование<br> инженерных систем
+                                    <a class="intro__link" href="#">
+                                        Монтаж и проектирование<br> инженерных систем
+                                    </a>
                                 </h2>
                                 <div class="intro__description">
                                     Помогаем разработать оптимальное решение<br> для обеспечения вашего объекта полным<br> комплектом инженерных сетей.
@@ -78,7 +80,9 @@
                             </div>
                             <div class="intro__item intro__item--last">
                                 <h2 class="intro__heading">
-                                    Комплексное производство<br> модульных решений
+                                    <a class="intro__link" href="#">
+                                        Комплексное производство<br> модульных решений
+                                    </a>
                                 </h2>
                                 <div class="intro__description">
                                     Комплексный подход к каждому проекту, начиная<br> с технического сопровождения получения исходных данных<br> для проектирования до финальной стадии производства и подтверждения соответствия техническим условиям.
