--- a/src/styles/_intro.css
+++ b/src/styles/_intro.css
@@ -14,7 +14,7 @@
 
 
 /* На 1326+ приходится использовать растянутую версию (см assets в фигме) (1) */
-@media (1326px <= width < 1850px) {
+@media (1326px <= width) {
 
     .intro {
         background-image: url("../images/intro/intro-laptop-1326-plus@1x.jpg");
@@ -61,6 +61,16 @@
                 color: #00F0FF;
                 text-transform: uppercase;
             }
+                .intro__link {
+                    display: block;
+                    color: inherit;
+                    text-decoration: none;
+                    transition: color var(--transition-hover);
+                }
+
+                .intro__link:hover {
+                    color: #FFFFFF;
+                }
 
             .intro__description {
                 margin-top: 16px;
@@ -136,3 +146,87 @@
                         width: 280px;
                     }
 }
+
+
+
+@media (width < 740px) {
+
+    .intro {
+        background-image: url("../images/intro/intro-smartphone-limited-by-376@1x.jpg");
+        background-size: 376px 503px; /* 376 -- это максимальная ширина доступной в Figma картинки (1) */
+        /*background-repeat: no-repeat;*/
+        /*background-position: center top;*/
+    }
+
+    @media (min-resolution: 1.5dppx) {
+
+        .intro {
+            background-image: url("../images/intro/intro-smartphone-limited-by-376@2x.jpg");
+        }
+    }
+
+
+    /* На 1326+ приходится использовать растянутую версию (см assets в фигме) (1) */
+    @media (376px <= width) {
+
+        .intro {
+            background-image: url("../images/intro/intro-smartphone-376-plus@1x.jpg");
+            background-size: 740px 503px;
+        }
+
+        @media (min-resolution: 1.5dppx) {
+
+            .intro {
+                background-image: url("../images/intro/intro-smartphone-376-plus@2x.jpg");
+            }
+        }
+    }
+
+        .intro__wrap {
+            display: block;
+            /*grid-template-columns: repeat(2, minmax(0, 1fr));*/
+        }
+            .intro__item {
+                margin-top: 5px;
+                height: 249px;
+                /*display: flex;*/
+                /*flex-direction: column;*/
+                /*align-items: flex-start;*/
+                /*padding-top: 19px;*/
+            }
+
+            .intro__item--first {
+                margin-top: 0;
+                /*height: 518px;*/
+                /*padding-right: 0;*/
+                /*padding-bottom: 38px;*/
+            }
+
+            .intro__item--last {
+                /*height: 356px;*/
+                text-align: left;
+                align-items: flex-start;
+                /*padding-left: 0;*/
+                /*padding-bottom: 28px;*/
+            }
+                .intro__heading {
+                    /*margin-top: 0;*/
+                    /*margin-bottom: 0;*/
+                    max-width: 240px;
+                    font-size: 18px;
+                    line-height: 22px;
+                    text-align: left;
+                    /*color: #00F0FF;*/
+                    /*text-transform: uppercase;*/
+                }
+
+                .intro__description {
+                    display: none;
+                }
+
+                .intro__action {
+                    display: none;
+                }
+}
+
+
