--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -68,7 +68,13 @@
                     </h1>
                     <div class="portfolio__list">
                         <div class="portfolio__list-wrap">
-                            <div class="carousel  carousel--js-init-portfolio  carousel--css-skin-portfolio carousel--css-disable-on-desktop">
+                            <div class="
+                                carousel
+                                carousel--js-init-portfolio
+                                carousel--css-skin-portfolio-on-smartphone
+                                carousel--css-disable-on-desktop
+                                carousel--css-skin-full-portfolio-on-desktop
+                            ">
                                 <div class="carousel__widget">
                                     <div class="swiper">
                                         <div class="swiper-wrapper">
