--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -63,35 +63,196 @@
             </div>
             <div class="page__body">
                 <div class="index">
-                    <div class="intro">
-                        <div class="intro__wrap container">
-                            <div class="intro__item intro__item--first">
-                                <h2 class="intro__heading">
-                                    <a class="intro__link" href="#">
-                                        Монтаж и проектирование<br> инженерных систем
+                    <div class="index__intro">
+                        <div class="intro">
+                            <div class="intro__wrap container">
+                                <div class="intro__item intro__item--first">
+                                    <h2 class="intro__heading">
+                                        <a class="intro__link" href="#">
+                                            Монтаж и проектирование<br> инженерных систем
+                                        </a>
+                                    </h2>
+                                    <div class="intro__description">
+                                        Помогаем разработать оптимальное решение<br> для обеспечения вашего объекта полным<br> комплектом инженерных сетей.
+                                    </div>
+                                    <a class="intro__action button" href="#">
+                                        Подробнее
                                     </a>
-                                </h2>
-                                <div class="intro__description">
-                                    Помогаем разработать оптимальное решение<br> для обеспечения вашего объекта полным<br> комплектом инженерных сетей.
                                 </div>
-                                <a class="intro__action button" href="#">
-                                    Подробнее
-                                </a>
-                            </div>
-                            <div class="intro__item intro__item--last">
-                                <h2 class="intro__heading">
-                                    <a class="intro__link" href="#">
-                                        Комплексное производство<br> модульных решений
+                                <div class="intro__item intro__item--last">
+                                    <h2 class="intro__heading">
+                                        <a class="intro__link" href="#">
+                                            Комплексное производство<br> модульных решений
+                                        </a>
+                                    </h2>
+                                    <div class="intro__description">
+                                        Комплексный подход к каждому проекту, начиная<br> с технического сопровождения получения исходных данных<br> для проектирования до финальной стадии производства и подтверждения соответствия техническим условиям.
+                                    </div>
+                                    <a class="intro__action button" href="#">
+                                        Подробнее
                                     </a>
-                                </h2>
-                                <div class="intro__description">
-                                    Комплексный подход к каждому проекту, начиная<br> с технического сопровождения получения исходных данных<br> для проектирования до финальной стадии производства и подтверждения соответствия техническим условиям.
                                 </div>
-                                <a class="intro__action button" href="#">
-                                    Подробнее
-                                </a>
                             </div>
                         </div>
+                    </div>
+                    <div class="index__projects">
+                        <section class="showcase">
+                            <h2 class="showcase__heading">
+                                Проекты
+                            </h2>
+                            <div class="showcase__body">
+                                <div class="
+                                    carousel
+                                    carousel--js-init-portfolio
+                                    carousel--css-skin-portfolio-on-smartphone
+                                    carousel--css-disable-on-desktop
+                                    carousel--css-skin-short-portfolio-on-desktop
+                                ">
+                                    <div class="carousel__widget">
+                                        <div class="swiper">
+                                            <div class="swiper-wrapper">
+                                                <div class="swiper-slide swiper-slide--01">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-a@2x.jpg 2x"
+                                                                 src="../temp/works/work-a@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            РОСТЕЛЕКОМ-Ростов-Эстакада
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--02">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-b@2x.jpg 2x"
+                                                                 src="../temp/works/work-b@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            10+ лет сотрудничества с АО «ТРАНСМАШХОЛДИНГ»: энергоснабжение и электрификация железных путей
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--03">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-c@2x.jpg 2x"
+                                                                 src="../temp/works/work-c@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            Испытательная станция
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--04">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-d@2x.jpg 2x"
+                                                                 src="../temp/works/work-d@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            СММ-Электро
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--05">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-e@2x.jpg 2x"
+                                                                 src="../temp/works/work-e@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            Станция водоподготовки для Птицефабрики «Северная»
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--06">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-f@2x.jpg 2x"
+                                                                 src="../temp/works/work-f@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            «Зелёная» электроэнергия и антенно-мачтовые сооружения для ФСБ
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="swiper-slide swiper-slide--07">
+                                                    <a class="work work--smaller" href="#">
+                                                        <div class="work__preview">
+                                                            <img class="work__image"
+                                                                 srcset="../temp/works/work-g@2x.jpg 2x"
+                                                                 src="../temp/works/work-g@1x.jpg"
+                                                                 width="366"
+                                                                 height="422"
+                                                                 alt=""
+                                                            >
+                                                        </div>
+                                                        <div class="work__label">
+                                                            РОСТЕЛЕКОМ-Ростов-Эстакада
+                                                        </div>
+                                                        <div class="work__details">
+                                                            Подробнее
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel__pagination">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
@@ -107,6 +268,8 @@
         <script src="../vendors/inputmask/jquery.inputmask.min.js"></script>
         <script src="../vendors/inputmask.phone/inputmask.phone.extensions.min.js"></script>
         <script src="../vendors/inputmask.phone/phone-codes/phone-ru.min.js"></script>
+
+        <script src="../vendors/swiper/swiper-bundle.min.js"></script>
         <script src="../scripts/scripts.js"></script>
 
 
