--- a/src/styles/_carousel.css
+++ b/src/styles/_carousel.css
@@ -38,39 +38,39 @@
 
 @media (740px <= width) {
 
-    .carousel--css-skin-portfolio .carousel {
+    .carousel--css-skin-full-portfolio-on-desktop .carousel {
 
     }
-        .carousel--css-skin-portfolio .carousel__widget {
+        .carousel--css-skin-full-portfolio-on-desktop .carousel__widget {
 
         }
-            .carousel--css-skin-portfolio .carousel__widget .swiper {
+            .carousel--css-skin-full-portfolio-on-desktop .carousel__widget .swiper {
 
             }
-                .carousel--css-skin-portfolio .carousel__widget .swiper-wrapper {
+                .carousel--css-skin-full-portfolio-on-desktop .carousel__widget .swiper-wrapper {
                     display: grid;
                     grid-template-columns: repeat(6, 162px); /* Default to 3 items per row */
                     gap: 0 42px;
                     justify-content: center;
                     padding-top: 69px;
                 }
-                    .carousel--css-skin-portfolio .swiper-slide {
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide {
                         display: flex;
                         margin-top: -69px !important;
                     }
 
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+1),
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+2),
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+3) {
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+1),
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+2),
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+3) {
                         grid-column: span 2;
                     }
 
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+4),
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+5) {
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+4),
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+5) {
                         grid-column: span 3;
                     }
-                        .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+4)::before,
-                        .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+5)::before {
+                        .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+4)::before,
+                        .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+5)::before {
                             content: "";
                             position: absolute;
                             top: 0;
@@ -83,45 +83,131 @@
                             background-position: center center;
                         }
 
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+4) {
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+4) {
                         justify-content: flex-end;
                     }
-                        .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+4)::before {
+                        .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+4)::before {
                             right: 408px;
                         }
 
-                    .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+5) {
+                    .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+5) {
                         justify-content: flex-start;
                     }
-                        .carousel--css-skin-portfolio .swiper-slide:nth-child(5n+5)::before {
+                        .carousel--css-skin-full-portfolio-on-desktop .swiper-slide:nth-child(5n+5)::before {
                             left: 408px;
                         }
 }
 
 
-@media (width < 740px) {
 
-    .carousel--css-skin-portfolio .carousel {
+@media (740px <= width) {
+
+    .carousel--css-skin-short-portfolio-on-desktop .carousel {
 
     }
-        .carousel--css-skin-portfolio .carousel__widget {
+        .carousel--css-skin-short-portfolio-on-desktop .carousel__widget {
+            overflow: hidden;
+        }
+            .carousel--css-skin-short-portfolio-on-desktop .carousel__widget .swiper {
+                margin-left: -500px;
+                margin-right: -500px;
+            }
+                .carousel--css-skin-short-portfolio-on-desktop .carousel__widget .swiper-wrapper {
+                    width: 1510px !important;
+                    height: 647px !important;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide {
+                        position: absolute;
+                    }
+
+                        /*.carousel--css-skin-short-portfolio-on-desktop .swiper-slide:nth-child(5n+4)::before,*/
+                        /*.carousel--css-skin-short-portfolio-on-desktop .swiper-slide:nth-child(5n+5)::before {*/
+                        /*    content: "";*/
+                        /*    position: absolute;*/
+                        /*    top: 0;*/
+                        /*    display: block;*/
+                        /*    width: 366px;*/
+                        /*    height: 422px;*/
+                        /*    background-image: url("../vectors/project-frame.svg");*/
+                        /*    background-size: contain;*/
+                        /*    background-repeat: no-repeat;*/
+                        /*    background-position: center center;*/
+                        /*}*/
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--01 {
+                        left: 0;
+                        bottom: 0;
+                    }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--02 {
+                        left: 285px;
+                        top: 164px;
+                    }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--03 {
+                        left: 570px;
+                        top: 0;
+                    }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--04 {
+                        left: 570px;
+                        bottom: 0;
+                    }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--05 {
+                        left: 855px;
+                        top: 164px;
+                    }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--06 {
+                        left: 1140px;
+                        top: 0;
+                    }
+                        .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--06::after {
+                                content: "";
+                                position: absolute;
+                                top: 100%;
+                                margin-top: 7px;
+                                display: block;
+                                width: 370px;
+                                height: 320px;
+                                background-image: url("../vectors/task-frame-laptop.svg");
+                                background-size: contain;
+                                background-repeat: no-repeat;
+                                background-position: center center;
+                        }
+
+                    .carousel--css-skin-short-portfolio-on-desktop .swiper-slide--07 {
+                        display: none;
+                    }
+}
+
+
+@media (width < 740px) {
+
+    .carousel--css-skin-portfolio-on-smartphone .carousel {
+
+    }
+        .carousel--css-skin-portfolio-on-smartphone .carousel__widget {
 
         }
-            .carousel--css-skin-portfolio .carousel__widget .swiper {
+            .carousel--css-skin-portfolio-on-smartphone .carousel__widget .swiper {
                 overflow: visible; /* будем обрезать парой уровней выше, у границ экрана, а не контейнера */
             }
-                .carousel--css-skin-portfolio .swiper-wrapper {
+                .carousel--css-skin-portfolio-on-smartphone .swiper-wrapper {
 
                 }
-                    .carousel--css-skin-portfolio .swiper-slide {
+                    .carousel--css-skin-portfolio-on-smartphone .swiper-slide {
 
                     }
-                    .carousel--css-skin-portfolio .swiper-slide {
+                    .carousel--css-skin-portfolio-on-smartphone .swiper-slide {
                         display: flex;
                         justify-content: center;
                     }
 
-        .carousel--css-skin-portfolio .carousel__pagination {
+        .carousel--css-skin-portfolio-on-smartphone .carousel__pagination {
             margin-top: 23px;
             display: flex;
             align-items: center;
@@ -130,7 +216,7 @@
             color: #FFFFFF;
             text-align: center;
         }
-            .carousel--css-skin-portfolio .carousel__bullet {
+            .carousel--css-skin-portfolio-on-smartphone .carousel__bullet {
                 flex-shrink: 0;
                 width: 28px;
                 height: 40px;
@@ -139,7 +225,7 @@
                 justify-content: center;
                 cursor: pointer;
             }
-                .carousel--css-skin-portfolio .carousel__bullet::after {
+                .carousel--css-skin-portfolio-on-smartphone .carousel__bullet::after {
                     content: "";
                     display: block;
                     width: 16px;
@@ -148,7 +234,7 @@
                     background-color: #666666;
                 }
 
-                .carousel--css-skin-portfolio .carousel__bullet--current::after {
+                .carousel--css-skin-portfolio-on-smartphone .carousel__bullet--current::after {
                     background-color: #FFFFFF;
                 }
 }
