--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -226,22 +226,8 @@
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide swiper-slide--07">
-                                                    <a class="work work--smaller" href="#">
-                                                        <div class="work__preview">
-                                                            <img class="work__image"
-                                                                 srcset="../temp/works/work-g@2x.jpg 2x"
-                                                                 src="../temp/works/work-g@1x.jpg"
-                                                                 width="366"
-                                                                 height="422"
-                                                                 alt=""
-                                                            >
-                                                        </div>
-                                                        <div class="work__label">
-                                                            РОСТЕЛЕКОМ-Ростов-Эстакада
-                                                        </div>
-                                                        <div class="work__details">
-                                                            Подробнее
-                                                        </div>
+                                                    <a class="work work--smaller work--new" href="#">
+                                                        Здесь возможен<br> ваш проект
                                                     </a>
                                                 </div>
                                             </div>
