--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -98,7 +98,9 @@
                     <div class="index__projects">
                         <section class="showcase">
                             <h2 class="showcase__heading">
-                                Проекты
+                                <a class="showcase__projects-link" href="#">
+                                    Проекты
+                                </a>
                             </h2>
                             <div class="showcase__body">
                                 <div class="
