--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -229,7 +229,8 @@
                                                 </div>
                                                 <div class="swiper-slide swiper-slide--07">
                                                     <a class="work work--smaller work--new" href="#">
-                                                        Здесь возможен<br> ваш проект
+                                                        <span class="work__add-project">Здесь возможен<br> ваш проект</span>
+                                                        <span class="work__add-project-hover">Заказать</span>
                                                     </a>
                                                 </div>
                                             </div>
