--- a/src/styles/_showcase.css
+++ b/src/styles/_showcase.css
@@ -89,7 +89,7 @@
                     display: block;
                     width: 22px;
                     height: 16px;
-                    background-image: url("../vectors/showcase-projects-link.svg");
+                    background-image: url("../vectors/arrow.svg");
                     background-repeat: no-repeat;
                     background-position: center center;
                 }
