--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -82,6 +82,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="separator"></div>
             </div>
             <div class="page__footer">
                 <footer class="footer">
