--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -69,7 +69,7 @@
                                 Компания ЭМКОМ
                             </h1>
                             <div class="company__description">
-                                Инженерно-производственная компания ЭМКОМ основана в 2005 г.
+                                Инженерно-производственная компания ЭМКОМ основана в&nbsp;2005&nbsp;г.
                             </div>
                             <div class="company__specialization">
                                 Специализация<br> компании
@@ -79,6 +79,12 @@
                                 Качество<br>
                                 Профессионализм
                             </div>
+                            <ul class="company__service">
+                                <li class="company__service-item">системы электроснабжения</li>
+                                <li class="company__service-item">комплексные системы безопасностисистемы водоснабжения и канализации</li>
+                                <li class="company__service-item">сети связи</li>
+                                <li class="company__service-item">системы кондиционирования отопления, вентиляции</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
