--- a/src/styles/_company.css
+++ b/src/styles/_company.css
@@ -81,6 +81,9 @@
                 text-align: center;
             }
 
+            .company__service {
+                display: none;
+            }
 
 
 @media (1850px <= width) {
@@ -167,4 +170,137 @@
                     /*color: #FFFFFF;*/
                     /*text-align: center;*/
                 }
+
+                .company__service {
+
+                }
 }
+
+
+
+@media (width < 740px) {
+
+    .company {
+        height: auto;
+        background-image: url("../images/about/about-smartphone-background@1x.jpg");
+        background-size: 740px 801px;
+        /*background-repeat: no-repeat;*/
+        background-position: center top;
+    }
+
+    @media (min-resolution: 1.5dppx) {
+        .company {
+            background-image: url("../images/about/about-smartphone-background@2x.jpg");
+        }
+    }
+
+        .company__content {
+            /*width: 100%;*/
+            /*height: 100%;*/
+            background-image: url("../images/about/about-content-smartphone.svg");
+            background-size: 740px 801px;
+            /*background-repeat: no-repeat;*/
+            background-position: center top;
+        }
+            .company__wrap {
+                /*position: relative;*/
+                padding-top: 14px;
+            }
+                .company__heading {
+                    /*margin-top: 0;*/
+                    /*margin-bottom: 0;*/
+                    /*font-weight: 600;*/
+                    font-size: 30px;
+                    line-height: 38px;
+                    /*text-align: center;*/
+                    /*color: #FFFFFF;*/
+                }
+
+                @media (width < 350px) {
+                    .company__heading {
+                        font-size: 28px;
+                        line-height: 32px;
+                    }
+                }
+
+                .company__description {
+                    margin-top: 10px;
+                    max-width: 320px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    font-weight: bold;
+                    font-size: 17px;
+                    line-height: 24px;
+                    color: #FFFFFF;
+                    text-wrap: balance;
+                    /*text-align: center;*/
+                }
+
+                .company__specialization {
+                    position: absolute;
+                    left: 50%;
+                    top: 168px;
+                    margin-left: -36px;
+                    font-size: 17px;
+                    line-height: 24px;
+                    color: #00F0FF;
+                    text-align: center;
+                    text-transform: none;
+                }
+                    .company__specialization::after {
+                        background-image: url("../vectors/arrow-4.svg");
+                        background-size: 30px 30px;
+                        left: 0;
+                        right: 0;
+                        margin-left: auto;
+                        margin-right: auto;
+                        bottom: 0;
+                        top: 100%;
+                    }
+
+                .company__features {
+                    position: absolute;
+                    left: 50%;
+                    top: 383px;
+                    margin-left: -33px;
+                    width: auto;
+                    font-weight: bold;
+                    font-size: 16px;
+                    line-height: 20px;
+                    color: #00F0FF;
+                }
+
+                .company__service {
+                    display: block;
+                    max-width: 310px;
+                    margin: 332px auto 0;
+                    padding-left: 0;
+                    padding-bottom: 23px;
+                    list-style: none;
+                }
+                    .company__service-item {
+                        margin-top: 15px;
+                        position: relative;
+                        padding-left: 16px;
+                        font-weight: 500;
+                        font-size: 17px;
+                        line-height: 24px;
+                        color: #FFFFFF;
+                    }
+
+                    .company__service-item:first-child {
+                        margin-top: 0;
+                    }
+                        .company__service-item::before {
+                            content: "";
+                            position: absolute;
+                            left: 0;
+                            top: 11px;
+                            display: block;
+                            width: 4px;
+                            height: 4px;
+                            background-color: currentColor;
+                            border-radius: 50%;
+                        }
+}
+
